finished profile, address, notification, password pages

--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -48,7 +48,7 @@ body
             background-color: darken(#0066AA, 8%) 
             border-color: darken(#0066AA, 8%) 
     &_rad
-        border-radius: 20px 
+        border-radius: rem(20px )
     
 
 .width173
@@ -61,6 +61,8 @@ body
     width: rem(197px)
 .width212
     width: rem(212px)
+.width216
+    width: rem(216px)
 .width270
     width: rem(270px)
 .width309
