--- a/src/sass/components/influencer/_influencer.sass
+++ b/src/sass/components/influencer/_influencer.sass
@@ -16,10 +16,10 @@
         position: relative
         max-width: rem(496px)
         .password-complexity
-            position: absolute
-            left: 0
-            right: 0
-            top: 100%
+            // position: absolute
+            // left: 0
+            // right: 0
+            // top: 100%
             margin-top: rem(7px)
     &__error-text
         margin-bottom: rem(40px)
@@ -83,6 +83,10 @@
 
 .password-complexity
     font-size: rem(13px)
+    position: absolute
+    left: 0
+    right: 0
+    top: 100%
     // margin-top: rem(7px)
     +sm
         font-size: 0
