--- a/src/templates/partials/settings-general/_settings-general.html
+++ b/src/templates/partials/settings-general/_settings-general.html
@@ -4,96 +4,99 @@
             <a href="#" class="btn btn-primary width270">Create a campaign</a>
         </div>
         <div class="compain-body dashboard-body">
-            <div class="settings-general">
-                <ul class="tab-list">
-                    {% for tab in [
-                        {
-                            text: "General",
-                            active: true
-                        },
-                        {
-                            text: "Address"
-                        },
-                        {
-                            text: "Profile"
-                        },
-                        {
-                            text: "Notifications"
-                        },
-                        {
-                            text: "Change Password"
-                        },
-                        {
-                            text: "Hire History"
-                        }
-                    ] %}
-                    <li class="tab {% if tab.active %}is-active{% endif %}"><a href="#" class="tab__link">{{ tab.text }}</a></li>
-                    {% endfor %}
-                </ul>
-                <form class="tab-content">
-                    <h2 class="settings-title">GENERAL</h2>
-                    <div class="tab-content__wrap">
-                        <div class="row tab-content__row">
-                            <div class="col">
-                                <div class="input-group">
-                                    <label for="nickname" class="input-group__label input-group__label_big">Display Name</label>
-                                    <div class="input-group__wrap">
-                                        <input type="text" autocomplete="off" id="nickname" class="form-control input-group__input" aria-describedby="inputGroupPrepend3" placeholder="Razer">
+                <div class="tabs">
+                    <button type="button" class="tabs__current">
+                        General
+                    </button>
+                    <ul class="tabs__list">
+                        {% for tab in [
+                            {
+                                text: "General",
+                                active: true
+                            },
+                            {
+                                text: "Address"
+                            },
+                            {
+                                text: "Profile"
+                            },
+                            {
+                                text: "Notifications"
+                            },
+                            {
+                                text: "Change Password"
+                            },
+                            {
+                                text: "Hire History"
+                            }
+                        ] %}
+                        <li class="tabs__item {% if tab.active %}is-active{% endif %}"><a href="#" class="tabs__link">{{ tab.text }}</a></li>
+                        {% endfor %}
+                    </ul>
+                    <form class="tabs__content">
+                        <h2 class="settings-title">GENERAL</h2>
+                        <div class="tabs__content-wrap">
+                            <div class="row tabs__content-row">
+                                <div class="col-lg tabs__content-col">
+                                    <div class="input-group">
+                                        <label for="nickname" class="input-group__label input-group__label_big">Display Name</label>
+                                        <div class="input-group__wrap">
+                                            <input type="text" autocomplete="off" id="nickname" class="form-control input-group__input" aria-describedby="inputGroupPrepend3" placeholder="Razer">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg tabs__content-col">
+                                    <div class="input-group">
+                                        <label for="site" class="input-group__label input-group__label_big">Company Website</label>
+                                        <div class="input-group__wrap">
+                                            <input type="text" autocomplete="off" id="site" class="form-control input-group__input" aria-describedby="inputGroupPrepend3" placeholder="https://test.com">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col">
-                                <div class="input-group">
-                                    <label for="site" class="input-group__label input-group__label_big">Company Website</label>
-                                    <div class="input-group__wrap">
-                                        <input type="text" autocomplete="off" id="site" class="form-control input-group__input" aria-describedby="inputGroupPrepend3" placeholder="https://test.com">
+                            <div class="row tabs__content-row">
+                                <div class="col-lg tabs__content-col">
+                                    <div class="input-group">
+                                        <label for="name" class="input-group__label input-group__label_big">First Name</label>
+                                        <div class="input-group__wrap">
+                                            <input type="text" autocomplete="off" id="name" class="form-control input-group__input" aria-describedby="inputGroupPrepend3" placeholder="Test 1">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg tabs__content-col">
+                                    <div class="input-group">
+                                        <label for="surname" class="input-group__label input-group__label_big">Last Name</label>
+                                        <div class="input-group__wrap">
+                                            <input type="text" autocomplete="off" id="surname" class="form-control input-group__input" aria-describedby="inputGroupPrepend3" placeholder="Test 2">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row tabs__content-row">
+                                <div class="col-lg tabs__content-col">
+                                    <div class="input-group">
+                                        <label for="phone" class="input-group__label input-group__label_big">Phone</label>
+                                        <div class="input-group__wrap">
+                                            <input type="text" autocomplete="off" id="phone" class="form-control input-group__input" aria-describedby="inputGroupPrepend3" placeholder="Test">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg tabs__content-col">
+                                    <div class="input-group">
+                                        <label for="email" class="input-group__label input-group__label_big">Email</label>
+                                        <div class="input-group__wrap">
+                                            <input type="text" autocomplete="off" id="email" class="form-control input-group__input" aria-describedby="inputGroupPrepend3" placeholder="Test">
+                                        </div>
+                                        <span for="email" class="input-group__label-bottom input-group__label-bottom_small">Note: Changing this email address will change your login email.</span>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="row tab-content__row">
-                            <div class="col">
-                                <div class="input-group">
-                                    <label for="name" class="input-group__label input-group__label_big">First Name</label>
-                                    <div class="input-group__wrap">
-                                        <input type="text" autocomplete="off" id="name" class="form-control input-group__input" aria-describedby="inputGroupPrepend3" placeholder="Test 1">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="input-group">
-                                    <label for="surname" class="input-group__label input-group__label_big">Last Name</label>
-                                    <div class="input-group__wrap">
-                                        <input type="text" autocomplete="off" id="surname" class="form-control input-group__input" aria-describedby="inputGroupPrepend3" placeholder="Test 2">
-                                    </div>
-                                </div>
-                            </div>
+                        <div class="tabs__content-submit">
+                                <button type="submit" class="btn btn btn-primary width216 btn-sm btn_rad">Save</button>
                         </div>
-                        <div class="row tab-content__row">
-                            <div class="col">
-                                <div class="input-group">
-                                    <label for="phone" class="input-group__label input-group__label_big">Phone</label>
-                                    <div class="input-group__wrap">
-                                        <input type="text" autocomplete="off" id="phone" class="form-control input-group__input" aria-describedby="inputGroupPrepend3" placeholder="Test">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="input-group">
-                                    <label for="email" class="input-group__label input-group__label_big">Email</label>
-                                    <div class="input-group__wrap">
-                                        <input type="text" autocomplete="off" id="email" class="form-control input-group__input" aria-describedby="inputGroupPrepend3" placeholder="Test">
-                                    </div>
-                                    <span for="email" class="input-group__label-bottom input-group__label-bottom_small">Note: Changing this email address will change your login email.</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="tab-content__submit">
-                            <button type="button" class="btn btn-primary btn_bold btn-lg btn_sm">Save</button>
-                    </div>
-                </form>
-            </div>
+                    </form>
+                </div>
         </div>
     </div>
 </div>
