finished settings-history page

--- a/src/sass/components/compain-audience/_compain-audience.sass
+++ b/src/sass/components/compain-audience/_compain-audience.sass
@@ -175,6 +175,7 @@
                 background-color: transparent
         &_big
             font-size: rem(18px)
+        &_inconsolata
             font-family: $font-family-inconsolata
     &_info
         padding-right: rem(28px)
