--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -167,3 +167,10 @@ body
 	transition: border-color .3s
 	&:hover
 		text-decoration: none
+
+.title-sm
+	font-family: 'Inconsolata', sans-serif
+	font-size: rem(20px) 
+	text-transform: uppercase
+	&:not(:last-child)
+		margin-bottom: 20px
