--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -4,6 +4,7 @@
 @import ../../node_modules/bootstrap-select/sass/bootstrap-select
 @import bootstrap/bootstrap
 @import generated/sprite-svg
+@import ../../node_modules/nouislider/distribute/nouislider.min
 @import layouts
 @import common
 @import main
