--- a/src/sass/components/dashboard/_statistics.sass
+++ b/src/sass/components/dashboard/_statistics.sass
@@ -10,9 +10,9 @@
 		display: inline-block
 		&:not(:first-child)
 			+xs
-				margin-top: 10px
+				margin-top: rem(10px)
 		+xl
-			min-width: 180px
+			min-width: rem(180px)
 		+sm
 			width: 48%
 			display: inline-block
