--- a/src/templates/partials/campaigns/_influencers.html
+++ b/src/templates/partials/campaigns/_influencers.html
@@ -75,8 +75,8 @@
                                         </li>
                                     </ul>
                                     <div class="d-card__footer">
-                                        <a href="#" class="btn btn btn-primary width197 btn-sm btn_rad">View Proposals</a>
-                                        <a href="#" class="btn btn btn-primary width197 btn-sm btn_rad btn_blue">Actions</a>
+                                        <a href="#" class="btn btn btn-primary width197 btn-sm btn_rad">SEND INVITE</a>
+                                        <a href="#" class="btn btn btn-primary width197 btn-sm btn_rad btn_blue">VIEW PROFILE</a>
                                     </div>
                                 </div>
                                 <!-- end d-card -->
@@ -86,7 +86,21 @@
                     </div>
                 </div>
                 <div class="dashboard__sitebar">
-                    
+                    <div class="title-sm">SORT BY</div>
+                    <div class="title-sm">CREATORS</div>
+                    <!-- begin range-slider -->
+                    <div class="range-slider">
+                        <div class="js-range-slider range-slider" data-range-max="48900" data-range-min="199" data-range-start="199" data-range-end="48900"></div>
+                        <div class="js-range-min"></div>
+                        <div class="js-range-max"></div>
+                    </div>
+                    <!-- end range-slider -->
+                    <div class="title-sm">REACH</div>
+                    <div class="title-sm">PRIMARY AUDIENCE GENDER</div>
+                    <div class="title-sm">PRIMARY AUDIENCE AGE</div>
+                    <div class="title-sm">AUDIENCE COUNTRY</div>
+                    <div class="title-sm">CREATOR'S COUNTRY</div>
+                    <div class="title-sm">CHANNEL CATEGORY</div>
                 </div>
             </div>
         </div>
