--- a/src/templates/partials/settings-history/_settings-history.html
+++ b/src/templates/partials/settings-history/_settings-history.html
@@ -41,7 +41,7 @@
                                         <div class="sm-tabs__head">
                                             <div class="sm-tabs__current">Discover</div>
                                             <ul class="sm-tabs__list">
-                                                {% for text in ['Discover','Hired'] %}
+                                                {% for text in ['YouTube','Twitter','Instagram','Tumblr','Facebook'] %}
                                                 <li class="sm-tabs__item{% if loop.first %} is-active{% endif %}">
                                                     <a href="#" class="sm-tabs__link">{{ text }}</a>
                                                 </li>
