--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -171,6 +171,7 @@ body
 .title-sm
 	font-family: 'Inconsolata', sans-serif
 	font-size: rem(20px) 
+	font-weight: 700 
 	text-transform: uppercase
 	&:not(:last-child)
 		margin-bottom: 20px
