--- a/src/sass/components/dashboard/_dashboard.sass
+++ b/src/sass/components/dashboard/_dashboard.sass
@@ -66,6 +66,12 @@
         width: rem(453px) 
         vertical-align: top
         display: table-cell
+    &__group
+        &:not(:last-child)
+            margin-bottom: rem(45px) 
+    &__field
+        &:not(:last-child)
+            margin-bottom: rem(13px) 
 
 .dashboard-body
     width: 100%
