--- a/src/sass/components/dashboard/_sm-tabs.sass
+++ b/src/sass/components/dashboard/_sm-tabs.sass
@@ -23,10 +23,10 @@
 		vertical-align: top
 		display: inline-block
 		&:not(:first-child)
-			margin-left: 70px
+			margin-left: rem(70px)
 	&__link
 		position: relative
-		font-size: 20px
+		font-size: rem(20px)
 		font-weight: 700 
 		color: #191919 
 		display: block
@@ -40,9 +40,9 @@
 			position: absolute
 			content: "" 
 			left: 0
-			right: 10px
-			bottom: -26px
-			height: 8px
+			right: rem(10px)
+			bottom: rem(-26px)
+			height: rem(8px)
 			background-color: #40B9A6
 			display: none
 			.sm-tabs__item.is-active &
@@ -50,7 +50,7 @@
 		&:after
 			position: absolute
 			content: "" 
-			top: -20px
-			bottom: -20px
+			top: rem(-20px)
+			bottom: rem(-20px)
 			left: 0
 			right: 0
