influencers page done

--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -174,4 +174,6 @@ body
 	font-weight: 700 
 	text-transform: uppercase
 	&:not(:last-child)
-		margin-bottom: 20px
+		margin-bottom: rem(20px)
+		+xl
+			margin-bottom: rem(15px)
