--- a/src/sass/components/dashboard/_sm-tabs.sass
+++ b/src/sass/components/dashboard/_sm-tabs.sass
@@ -1,4 +1,5 @@
 .sm-tabs
+	position: relative
 	font-size: 0
 	&__head
 		padding: rem(25px 58px)
@@ -17,13 +18,49 @@
 			min-height: auto
 	&__list
 		margin: 0
+		+md
+			position: absolute
+			left: -20px
+			right: -20px
+			top: 100%
+			z-index: 10
+			margin-top: 16px
+			box-shadow: 0 2px 4px rgba(#000000, .16) 
+			background-color: #FFF 
+			display: none
+		+sm
+			left: -15px
+			right: -15px
+		.sm-tabs.is-open &
+			display: block
 	&__current
+		position: relative
+		font-size: rem(20px)
+		font-weight: 700 
+		color: #191919 
+		cursor: pointer
+		width: 100%
+		border-color: transparent 
 		display: none
+		&:before
+			position: absolute
+			content: "" 
+			top: 50%
+			right: 0
+			margin-top: -3px
+			+arr(12,6,#191919,b)
+		+md
+			display: block
 	&__item
 		vertical-align: top
 		display: inline-block
+		+md
+			display: block
 		&:not(:first-child)
 			margin-left: rem(70px)
+			+md
+				margin-left: 0
+				border-top: 1px solid #d5d5d5 
 	&__link
 		position: relative
 		font-size: rem(20px)
@@ -31,6 +68,9 @@
 		color: #191919 
 		display: block
 		transition: color .3s
+		+md
+			padding: 10px 15px
+			font-size: rem(16px)
 		.is-active &
 			color: #40B9A6
 		&:hover
@@ -45,6 +85,12 @@
 			height: rem(8px)
 			background-color: #40B9A6
 			display: none
+			+xl
+				bottom: rem(-21px) 
+			+md
+				bottom: -1px 
+				right: 0
+				height: rem(3px)
 			.sm-tabs__item.is-active &
 				display: block
 		&:after
@@ -54,3 +100,5 @@
 			bottom: rem(-20px)
 			left: 0
 			right: 0
+			+md
+				display: none
